--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>invitacion</title>
    <style>
         body{
@@ -40,7 +40,7 @@
 <body>
     <div id="sobre"">
         <a href="invite-bian.html">
-          <img src="../img/sobre-abrir.png" alt="">
+          <img src="img/sobre-abrir.png" alt="">
         </a> 
     </div>
 </body>
