--- a/invite-bian.html
+++ b/invite-bian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         <p class="p-uno" style="font-size: 20px;">¡ Te invito a mis 15 ♡ !</p> 
         <p class="p-dos" style="font-size: 40px;"> Bian.</p>
         <div>
-          <img src="../img/porta-bian.jpeg" alt="">
+          <img src="./img/porta-bian.jpeg" alt="">
         </div>
     </div>
 
@@ -71,7 +71,7 @@
         <div class="donde-cuando">
             <p> Donde y cuando </p>
             <p style="font-family: 'Roboto', sans-serif; color: black; font-size: 1.5rem;"> Janos acceso oeste </p>
-            <img src="../img/salon-bian.png" alt="">
+            <img src="./img/salon-bian.png" alt="">
         </div>
 
         <div class="invite-dias">
@@ -85,7 +85,7 @@
             <p>Celebracion</p>
             <p>21:30hs a 05:30hs</p>
             <div class="copas">
-                <img src="../img/mariposa-dos.png" alt="">
+                <img src="./img/mariposa-dos.png" alt="">
             </div>
             <p>Janos Acceso Oeste</p>
             <div class="boton-invite" style="background-color: #5A6953; color: black; box-shadow: 2px 2px 5px black; ">
@@ -100,10 +100,10 @@
     <div class="fotos-pareja">
         <div class="fotos">
             <div>
-               <img src="../img/bian-uno.jpg" alt=""> 
+               <img src="./img/bian-uno.jpg" alt=""> 
             </div>
             <div>
-                <img src="../img/bian-dos.jpg" alt=""> 
+                <img src="./img/bian-dos.jpg" alt=""> 
              </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
     <!-- dress code -->
     <div class="dress" style="height: 100vh; background-image: url(../img/mariposa-uno.png); background-size: contain; display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <p class="p-uno">Dress Code</p>
-        <img src="../img/dress-code.png" alt="" width="50%">
+        <img src="./img/dress-code.png" alt="" width="50%">
         <p class="p-uno">Elegante</p>
         
         <p class="parrafo">
@@ -129,7 +129,7 @@
      <div class="fotos-pareja">
         <div class="fotos">
             <div>
-                <img src="../img/bian-timmer.jpeg" alt=""> 
+                <img src="./img/bian-timmer.jpeg" alt=""> 
              </div>
         </div>
     </div>
