--- a/invite-bian.html
+++ b/invite-bian.html
@@ -46,7 +46,7 @@
     </script>
 </head>
 <body class="invitacion invitacion-dos invitacion-bian">
-    <div class="inicio" style="height: 100vh; background-image: url(../img/mariposa-uno.png); background-size: contain;">
+    <div class="inicio" style="height: 100vh; background-image: url(./img/mariposa-uno.png); background-size: contain;">
         <p class="p-uno" style="font-size: 20px;">¡ Te invito a mis 15 ♡ !</p> 
         <p class="p-dos" style="font-size: 40px;"> Bian.</p>
         <div>
@@ -110,7 +110,7 @@
    
 
     <!-- dress code -->
-    <div class="dress" style="height: 100vh; background-image: url(../img/mariposa-uno.png); background-size: contain; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <div class="dress" style="height: 100vh; background-image: url(./img/mariposa-uno.png); background-size: contain; display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <p class="p-uno">Dress Code</p>
         <img src="./img/dress-code.png" alt="" width="50%">
         <p class="p-uno">Elegante</p>
