--- a/invite-bian.html
+++ b/invite-bian.html
@@ -46,6 +46,10 @@
     </script>
 </head>
 <body class="invitacion invitacion-dos invitacion-bian">
+
+    <audio autoplay loop>
+        <source src="sonido/cancion.mp3" type="audio/mpeg">
+    </audio>
     <div class="inicio" style="height: 100vh; background-image: url(./img/mariposa-uno.png); background-size: contain;">
         <p class="p-uno" style="font-size: 20px;">¡ Te invito a mis 15 ♡ !</p> 
         <p class="p-dos" style="font-size: 40px;"> Bian.</p>
@@ -71,7 +75,7 @@
         <div class="donde-cuando">
             <p> Donde y cuando </p>
             <p style="font-family: 'Roboto', sans-serif; color: black; font-size: 1.5rem;"> Janos acceso oeste </p>
-            <img src="./img/salon-bian.png" alt="">
+            <img src="./img/foto-salonm.png" alt="">
         </div>
 
         <div class="invite-dias">
@@ -122,6 +126,26 @@
             Traé brillo, estilo y ganas de fiesta. <br>
             ✨ Dress code: Elegante.
             
+        </p>
+    </div>
+
+    <!-- mercado pago -->
+    <div class="dress" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        
+        <p class="parrafo">
+            ✨ Mis 15 años ✨ <br>
+
+            ¡Te invito a celebrar conmigo <br>esta noche especial! <br>
+            Lo único importante es que vengas y compartas este momento 🥰 <br> <br>
+
+            No es necesario traer regalo 🎁 <br>
+            Pero si alguien quiere tener un detalle, puede hacerlo mediante depósito 💖 <br> <br>
+
+            ¡Por las dudas este es mi alias!
+
+            <div class="boton-invite" style="background-color: #5A6953; color: black; box-shadow: 2px 2px 5px black; ">
+                Bian2515
+            </div>
         </p>
     </div>
 
